@@ -1170,7 +1170,7 @@ void OOWriterWorker::processFootnote( const VariableData& variable )
 void OOWriterWorker::processNote( const VariableData& variable )
 {
     // KWord 1.3's annotations are anonymous and undated, however the OO specification tells that author and date are mandatory.
-    // ### TODO: how to have a better author for annotations?
+
     *m_streamOut << "<office:annotation office:create-date=\"";
 
     // We use the document creation date as creation date for the annotation
@@ -1181,7 +1181,13 @@ void OOWriterWorker::processNote( const VariableData& variable )
         *m_streamOut << "1970-01-01";
 
     *m_streamOut << "\" office:author=\"";
-    *m_streamOut << escapeOOText( i18n( "Pseudo-author for annotations", "KWord 1.3" ) );
+
+    // We try to use the document author's name as annotation author
+    if ( m_docInfo.fullName.isEmpty() )
+        *m_streamOut << escapeOOText( i18n( "Pseudo-author for annotations", "KWord 1.3" ) );
+    else
+        *m_streamOut << escapeOOText( m_docInfo.fullName );
+
     *m_streamOut << "\">\n";
     *m_streamOut << "<text:p>"
         << escapeOOSpan( variable.getGenericData( "note" ) )
