@@ -2,4 +2,5 @@
 - Support for text images (created by KWord 0.8 or re-saved by KWord 1.2/1.3)
 - Improved character and paragraph formatting
 - Bookmarks
-- import KWord documents in raw XML
+- Import KWord documents in raw XML
+- Notes (also known as annotations)
